--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -372,6 +372,77 @@ section.rede-social p{
     background-color:#ccc;
     border:4px solid rgb(255, 255, 255);
     
+}form.campo-formulario h2{
+  color:#b4b4b4;
+  text-align: center;
+  margin-top:92px;
+}
+form.campo-formulario input {
+   position:absolute;
+   display:inline-block;
+   margin:4px;
+   color:#ccc;
+   margin-left:520px;
+  
+}
+form.campo-formulario input:nth-of-type(1){
+   width:355px;
+   margin-left: 273px;
+   height:20px;
+  
+  
+}
+form.campo-formulario input:nth-of-type(2){
+  margin-left:274px;
+  height:20px;
+}
+form.campo-formulario input:nth-of-type(3){
+  margin-top:10px;
+  margin-left:458px;
+  height:20px;
+  display: inline-block;
+  position:relative;
+}
+form.campo-formulario h5:nth-of-type(3){
+  margin-left:458px;
+  display: block;
+  position: relative;
+  margin-top:-22px;
+
+ 
+}
+form.campo-formulario input:nth-of-type(4){
+  margin-top:15px;
+  margin-left:274px;
+  height: 20px;;
+}
+form.campo-formulario h5:nth-of-type(4){
+  margin-top:5px;
+}
+form.campo-formulario h5{
+   color:rgb(185, 185, 185);
+   text-transform: uppercase;
+   margin-left:278px;
+   margin-top:35px;
+  
+}
+form.campo-formulario h5:nth-of-type(5){
+  margin-top:120px;
+  display: inline-block;
+  position: absolute;
+}
+textarea{
+  margin-top:160px;
+  margin-left:272px;
+  width:367px;
+  height:100px;
+  position:absolute;
+}
+form.campo-formulario input:nth-of-type(5){
+  margin-top:320px;
+  margin-left:282px;
+  width:63px;
+  height:30px;
 }
 
 /*aqui termina*/
@@ -513,7 +584,11 @@ section.rede-social p{
     margin-top:-54px;
   }
   /*aqui termina*/
- 
+  section.rede-social svg{
+    display:block;
+    position:relative;
+    margin-left:207px;
+  }
 }
 @media screen and (max-width:580px){
  
@@ -553,4 +628,4 @@ section.rede-social p{
   header .logo img{
     width:150px;
   }
-}
+} 
